# aitiguru-trial-task

./: .env.example  README.md  init_db.sh  pyproject.toml
docker/: Dockerfile.task3service  docker-compose.yaml  nginx.conf
task2/: 1_get_clients_orders_total_sums.sql  2_first_nested_lvl_child_elements_num.sql  3_top_5_sold_goods.sql  4_perfomance_improvements.md
task3/: create_db_tables.py  dbmodels.py  dependencies.py  exc.py  exec_sql_script.py  interfaces.py  main.py  repositories.py  routers.py  schemas.py  settings.py
tests/: conftest.py  insert_categories.sql  test_data_fill_in.sql  test_orders.py
