[project]
name = "aitiguru-trial-task"
version = "0.1.0"
description = ""
authors = [
    {name = "Gevorji",email = "techno9882@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "uvicorn (>=0.36.0,<0.37.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
pytest = "^8.4.2"
testcontainers = {extras = ["postgres"], version = "^4.13.0"}
httpx = "^0.28.1"

